# azera

./: .dockerignore  .env  .gitignore  LICENSE  docker-compose.yml  readme.md
backend/: Cargo.toml  Dockerfile  build.rs  entrypoint.sh
backend/src/: backup.rs  cache.rs  components.rs  db.rs  handlers.rs  llm.rs  main.rs  models.rs  systems.rs  tools.rs  vector.rs
datastore/backup/: ollama_ledger.json
datastore/voice_samples/: 1771796925_829bbaa5.flac
docs/: API.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  RUN_CMDS.md  blog.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: app.css  app.html  bun-test.d.ts
frontend/src/css/: app.css  chat.css  layout.css
frontend/src/lib/: llm_service.test.ts  llm_service.ts  monaco_workers.ts  state.svelte.ts  store.svelte.ts  store.test.ts  store.utils.ts  tts_service.test.ts  tts_service.ts
frontend/src/lib/components/: BranchSelector.svelte  ChatInput.svelte  ChatMessage.svelte  ColorPicker.svelte  DreamViewer.svelte  DynamicIcon.svelte  EditorConfig.svelte  ImageGallery.svelte  ImageGenerator.svelte  JournalViewer.svelte  MessageBubble.svelte  MessageEditor.svelte  ModelManager.svelte  Monaco.svelte  MonacoInput.svelte  PersonaEditor.svelte  ProfileViewer.svelte  (+6 more)
frontend/src/routes/: +page.svelte
imagegen/: Dockerfile  download_models.py  entrypoint.sh  server.py
jenkins/: Dockerfile  Jenkinsfile  casc.yaml
jenkins/init.groovy.d/: 01-create-admin.groovy  02-create-pipeline.groovy
personas/: _template.md  areza.md  azera.md
(+1 files in other folders)
